# AMD-ASPFW

bignum-rs/: Cargo.toml  Makefile  README.md  alignment_test.rs  build.rs  build.sh  cbindgen.toml  diagnostic_test.c  symbols.map
bignum-rs/docs/: BigNum-RS_Project_Presentation.md  c-to-rust-conversion-workflow.md  project_findings_report.md  reverse-engineering-requirements.md  technical_analysis_report.md  test_coverage_report.md
bignum-rs/examples/: test_bignum_ffi.c
bignum-rs/include/: bignum_ffi.h
bignum-rs/scripts/: coverage_summary.sh
bignum-rs/src/: lib.rs
bignum-rs/tests/: unit_test.c
docs/: amd_aspfw_complete_architecture.md  bignum_architecture_diagrams.md  bignum_library_documentation.md  bignum_test_suite_specification.md  rust_migration_analysis.md
